package Builders;

public interface Builder {
    public boolean finished();
    public void progress();
}
